--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="theme-color" content="#ffffff">
     <meta property="og:title" content="Sebastian & Mariane getting married">
     <meta property="og:description" content="We would like to invite you to our big day.">
-    <meta property="og:image" content="https://wedding.ramswaroop.me/img/hero-min.jpg">
+    <meta property="og:image" content="https://marianeysebastian.github.io/img/hero-min.jpg">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -100,6 +100,7 @@
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
                     <div class="hero-content text-center">
+                        <h1>Save the date</h1>
                         <h1>Mariane y Sebastian</h1>
                         <h2 style="color:white;">
                             <bold>16 de Marzo 2024</bold>
